--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,49 @@ margin: auto;
 section {
 padding: 50px 0;
 }
+
+.customFigure {
+    width: 100%;
+    height: 100%;
+}
+
+.sticky__header{
+    width: 100%;
+    height: 80px;
+    line-height: 80px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    background: white;
+    box-shadow: 3px 3px -8px 3px gray;
+    z-index: 99;
+}
+
+
+@media only screen and (max-width:760px){
+    .menu{
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: #00000084;
+        z-index: 100;
+        display: none;
+    }
+    .menu ul{
+        width: 15rem;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 200;
+        background: white;
+        flex-direction: column;
+        line-height: 30px;
+        justify-content: center;
+    }
+    .show__menu{
+        display: block;
+    }
+}
